refactor: Simplify sorting logic and update category response properties in getAllCategories method